# maze_ws

./: cyclonedds_config.xml  frames_2025-11-06_23.18.39.gv  frames_2025-11-06_23.42.51.gv  frames_2025-11-07_02.13.35.gv  frames_2025-11-07_02.30.28.gv  frames_2025-11-07_02.37.25.gv  frames_2025-11-07_08.19.49.gv  frames_2025-11-07_08.41.26.gv  frames_2025-11-07_08.46.19.gv  frames_2025-11-07_09.01.11.gv  frames_2025-11-07_10.20.04.gv  frames_2025-11-07_11.09.25.gv  frames_2025-11-07_12.19.53.gv  frames_2025-11-07_12.46.07.gv  frames_2025-11-07_13.15.41.gv  frames_2025-11-08_22.18.41.gv  frames_2025-11-08_22.35.49.gv  frames_2025-11-08_23.20.58.gv  frames_2025-11-08_23.22.44.gv  frames_2025-11-08_23.46.00.gv  frames_2025-11-09_00.08.07.gv  frames_2025-11-09_00.54.14.gv  frames_2025-11-09_01.27.32.gv  frames_2025-11-09_01.56.26.gv  frames_2025-11-09_03.31.18.gv  frames_2025-11-09_03.37.36.gv  frames_2025-11-09_04.03.02.gv  frames_2025-11-09_16.19.29.gv  frames_2025-11-09_16.21.58.gv  frames_2025-11-09_16.22.39.gv  frames_2025-11-09_16.40.37.gv  frames_2025-11-09_16.42.22.gv  frames_2025-11-09_17.32.34.gv  my_rviz_config.rviz  room_manager.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mazesim/lib/mazesim/: generate_walls.py  laser_frame_remapper.py  map_loader.py  nav2_command_bridge  nav2_command_translator  odom_frame_fixer.py  odom_tf_broadcaster.py  test_room_config  verify_positions
install/mazesim/share/ament_index/resource_index/package_run_dependencies/: mazesim
install/mazesim/share/ament_index/resource_index/parent_prefix_path/: mazesim
install/mazesim/share/mazesim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mazesim/share/mazesim/cmake/: mazesimConfig-version.cmake  mazesimConfig.cmake
install/mazesim/share/mazesim/config/: nav2_params.yaml  nav2_params_robot1.yaml  nav2_params_robot3.yaml  room_positions.yaml
install/mazesim/share/mazesim/environment/: ament_prefix_path.dsv  path.dsv
install/mazesim/share/mazesim/launch/: complete_simulation.launch.py  complete_simulation_direct.launch.py  complete_simulation_fixed.launch.py  complete_simulation_move.launch.py  complete_simulation_nav2.launch.py  complete_simulation_with_odom_fix.launch.py  gazebo.launch.py  localization_launch.py  nav2_navigation.launch.py  spawn_robots.launch.py  working_sim.launch.py
install/mazesim/share/mazesim/maps/: my_map_1.pgm  my_map_1.yaml
install/mazesim/share/mazesim/models/map_floor/: model.config  model.sdf
install/mazesim/share/mazesim/models/map_floor/materials/scripts/: map_floor.material
install/mazesim/share/mazesim/models/maze_map/: model.config  model.sdf
install/mazesim/share/mazesim/models/maze_walls/: model.config  model.sdf
install/mazesim/share/mazesim/models/turtlebot3_burger/: model-1_4.sdf  model.config  model.sdf
install/mazesim/share/mazesim/urdf/: turtlebot3_burger_fixed.urdf
install/mazesim/share/mazesim/worlds/: maze_world.world
install/real_maze_robots/share/ament_index/resource_index/package_run_dependencies/: real_maze_robots
install/real_maze_robots/share/real_maze_robots/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/real_maze_robots/share/real_maze_robots/cmake/: real_maze_robotsConfig.cmake
install/real_maze_robots/share/real_maze_robots/launch/: command_publisher.launch.py
log/: latest_build  latest_list
src/mazesim/: CMakeLists.txt  ROOM_LAYOUT.md
src/mazesim/config/: nav2_params.yaml  nav2_params_robot1.yaml  room_positions.yaml
src/mazesim/include/mazesim/: room_manager.hpp
src/mazesim/launch/: complete_simulation_fixed.launch.py  complete_simulation_move.launch.py  complete_simulation_nav2.launch.py  complete_simulation_with_odom_fix.launch.py  nav2_navigation.launch.py
src/mazesim/maps/: room_positions.yaml
src/mazesim/mazesim/: laser_frame_remapper.py  map_loader.py  odom_tf_broadcaster.py  scan_frame_fixer.py
src/mazesim/models/maze_map/: model.sdf
src/mazesim/models/turtlebot3_burger/: model.sdf
src/mazesim/scripts/: map_to_gazebo.py
src/mazesim/src/: nav2_command_bridge.cpp  nav2_command_translator.cpp  robot_controller.cpp  test_room_config.cpp  verify_positions.cpp
src/real_maze_robots/: CMakeLists.txt
src/real_maze_robots/include/real_maze_robots/: room_manager.hpp
src/real_maze_robots/launch/: single_robot.launch.py
src/real_maze_robots/scripts/: extract_room_positions.py  send_commands.py
src/real_maze_robots/src/: multi_domain_commander.cpp  real_robot_controller.cpp
